// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> checked type should render correctly 1`] = `
<label
  className="flex"
>
  <input
    className="relative border-sierra-night-40 relative inline-block h-6 w-6 appearance-none overflow-hidden rounded-full border-1 bg-white p-1 shadow-sm transition-all after:content[''] after:w-full after:h-full after:top-0 after:left-0 after:-right-0 after:bottom-0 after:m-auto after:rounded-full after:block after:bg-ocean-100 after:scale-0 after:transition-all checked:bg-white checked:after:scale-100"
    defaultChecked={true}
    disabled={false}
    name="Test"
    type="radio"
    value="1"
  />
  <span
    className="text-p-2 ml-3"
  >
    Test
  </span>
</label>
`;

exports[`<Radio /> disabled should render correctly 1`] = `
<label
  className="flex disabled"
>
  <input
    className="relative border-sierra-night-40 relative inline-block h-6 w-6 appearance-none overflow-hidden rounded-full border-1 bg-white p-1 shadow-sm transition-all after:content[''] after:w-full after:h-full after:top-0 after:left-0 after:-right-0 after:bottom-0 after:m-auto after:rounded-full after:block after:bg-ocean-100 after:scale-0 after:transition-all checked:bg-white checked:after:scale-100"
    defaultChecked={false}
    disabled={true}
    name="Test"
    type="radio"
    value="1"
  />
  <span
    className="text-p-2 ml-3"
  >
    Test
  </span>
</label>
`;

exports[`<Radio /> should render correctly 1`] = `
<label
  className="flex"
>
  <input
    className="relative border-sierra-night-40 relative inline-block h-6 w-6 appearance-none overflow-hidden rounded-full border-1 bg-white p-1 shadow-sm transition-all after:content[''] after:w-full after:h-full after:top-0 after:left-0 after:-right-0 after:bottom-0 after:m-auto after:rounded-full after:block after:bg-ocean-100 after:scale-0 after:transition-all checked:bg-white checked:after:scale-100"
    defaultChecked={false}
    disabled={false}
    name="Test"
    type="radio"
    value="1"
  />
  <span
    className="text-p-2 ml-3"
  >
    Test
  </span>
</label>
`;
